include/imgui_wasm_imgui.h


typedef struct ImVec2_t ImVec2;
typedef struct ImVec4_t ImVec4;
typedef unsigned int ImGuiID;      
typedef unsigned int ImU32;        
typedef struct ImDrawData_t ImDrawData;                              
typedef struct ImDrawList_t ImDrawList;                              
typedef struct ImDrawListSharedData_t ImDrawListSharedData;          
typedef struct ImFont_t ImFont;                                      
typedef struct ImFontAtlas_t ImFontAtlas;                            
typedef struct ImFontBaked_t ImFontBaked;                            
typedef struct ImGuiContext_t ImGuiContext;                                    
typedef struct ImGuiIO_t ImGuiIO;                                              
typedef struct ImGuiMultiSelectIO_t ImGuiMultiSelectIO;                        
typedef struct ImGuiPayload_t ImGuiPayload;                                    
typedef struct ImGuiViewport_t ImGuiViewport;                                  
typedef struct ImGuiWindowClass_t ImGuiWindowClass;                            
typedef int ImGuiDir;             
typedef int ImGuiChildFlags;        
typedef int ImGuiColorEditFlags;    
typedef int ImGuiComboFlags;        
typedef int ImGuiDockNodeFlags;     
typedef int ImGuiDragDropFlags;     
typedef int ImGuiItemFlags;         
typedef int ImGuiPopupFlags;        
typedef int ImGuiMultiSelectFlags;  
typedef int ImGuiSliderFlags;       
typedef int ImGuiTabBarFlags;       
typedef int ImGuiTabItemFlags;      
typedef int ImGuiTableFlags;        
typedef int ImGuiTreeNodeFlags;     
typedef int ImGuiWindowFlags;       
typedef void* (*ImGuiMemAllocFunc)(size_t sz, void* user_data);           
typedef void (*ImGuiMemFreeFunc)(void* ptr, void* user_data);             
struct ImVec4_t
{
    float x, y, z, w;
};
IM_MSVC_RUNTIME_CHECKS_RESTORE
CIMGUI_API ImGuiContext* igCreateContext(ImFontAtlas* shared_font_atlas );
CIMGUI_API void          igDestroyContext(ImGuiContext* ctx );      
CIMGUI_API ImGuiContext* igGetCurrentContext(void);
CIMGUI_API ImGuiIO*         igGetIO(void);              
CIMGUI_API void             igEndFrame(void);           
CIMGUI_API ImDrawData*      igGetDrawData(void);        
CIMGUI_API bool igBegin(const char* name, bool* p_open , ImGuiWindowFlags flags );
CIMGUI_API void igEnd(void);
CIMGUI_API bool igBeginChild(const char* str_id, ImVec2 size , ImGuiChildFlags child_flags , ImGuiWindowFlags window_flags );
CIMGUI_API bool igBeginChildID(ImGuiID id, ImVec2 size , ImGuiChildFlags child_flags , ImGuiWindowFlags window_flags );
CIMGUI_API void igEndChild(void);
CIMGUI_API ImFont*      igGetFont(void);                                                   
CIMGUI_API float        igGetFontSize(void);                                               
CIMGUI_API ImFontBaked* igGetFontBaked(void);                                              
CIMGUI_API float igCalcItemWidth(void);                                       
CIMGUI_API ImVec2        igGetFontTexUvWhitePixel(void);                                   
CIMGUI_API ImU32         igGetColorU32ImVec4(ImVec4 col);                                  
CIMGUI_API ImU32         igGetColorU32ImU32(ImU32 col, float alpha_mul );      
CIMGUI_API ImVec2 igGetCursorScreenPos(void);            
CIMGUI_API ImVec2 igGetContentRegionAvail(void);         
CIMGUI_API ImVec2 igGetCursorPos(void);                  
CIMGUI_API float  igGetCursorPosX(void);                 
CIMGUI_API float  igGetCursorPosY(void);                 
CIMGUI_API ImVec2 igGetCursorStartPos(void);             
CIMGUI_API void  igDummy(ImVec2 size);                         
CIMGUI_API void  igBeginGroup(void);                           
CIMGUI_API void  igEndGroup(void);                             
CIMGUI_API void  igAlignTextToFramePadding(void);              
CIMGUI_API float igGetFrameHeight(void);                       
CIMGUI_API float igGetFrameHeightWithSpacing(void);            
CIMGUI_API ImGuiID igGetID(const char* str_id);                                        
CIMGUI_API ImGuiID igGetIDStr(const char* str_id_begin, const char* str_id_end);
CIMGUI_API ImGuiID igGetIDPtr(const void* ptr_id);
CIMGUI_API ImGuiID igGetIDInt(int int_id);
CIMGUI_API bool igButton(const char* label, ImVec2 size );                                 
CIMGUI_API bool igArrowButton(const char* str_id, ImGuiDir dir);                                               
CIMGUI_API bool igCheckbox(const char* label, bool* v);
CIMGUI_API bool igCheckboxFlagsIntPtr(const char* label, int* flags, int flags_value);
CIMGUI_API bool igCheckboxFlagsUintPtr(const char* label, unsigned int* flags, unsigned int flags_value);
CIMGUI_API void igBullet(void);                                                                                
CIMGUI_API bool igBeginCombo(const char* label, const char* preview_value, ImGuiComboFlags flags );
CIMGUI_API void igEndCombo(void);                                                                                                                            
CIMGUI_API bool igComboChar(const char* label, int* current_item, const char*const items[], int items_count, int popup_max_height_in_items );
CIMGUI_API bool igCombo(const char* label, int* current_item, const char* items_separated_by_zeros, int popup_max_height_in_items );               
CIMGUI_API bool igDragFloat(const char* label, float* v, float v_speed , float v_min , float v_max , const char* format , ImGuiSliderFlags flags );                                              
CIMGUI_API bool igDragFloat3(const char* label, float v[3], float v_speed , float v_min , float v_max , const char* format , ImGuiSliderFlags flags );
CIMGUI_API bool igDragFloat4(const char* label, float v[4], float v_speed , float v_min , float v_max , const char* format , ImGuiSliderFlags flags );
CIMGUI_API bool igDragFloatRange2(const char* label, float* v_current_min, float* v_current_max, float v_speed , float v_min , float v_max , const char* format , const char* format_max , ImGuiSliderFlags flags );
CIMGUI_API bool igDragInt(const char* label, int* v, float v_speed , int v_min , int v_max , const char* format , ImGuiSliderFlags flags );                                                              
CIMGUI_API bool igDragIntRange2(const char* label, int* v_current_min, int* v_current_max, float v_speed , int v_min , int v_max , const char* format , const char* format_max , ImGuiSliderFlags flags );
CIMGUI_API bool igColorEdit3(const char* label, float col[3], ImGuiColorEditFlags flags );
CIMGUI_API bool igColorEdit4(const char* label, float col[4], ImGuiColorEditFlags flags );
CIMGUI_API bool igColorPicker3(const char* label, float col[3], ImGuiColorEditFlags flags );
CIMGUI_API bool igColorPicker4(const char* label, float col[4], ImGuiColorEditFlags flags , const float* ref_col );
CIMGUI_API bool igColorButton(const char* desc_id, ImVec4 col, ImGuiColorEditFlags flags , ImVec2 size );      
CIMGUI_API bool  igCollapsingHeader(const char* label, ImGuiTreeNodeFlags flags );                                     
CIMGUI_API bool  igCollapsingHeaderBoolPtr(const char* label, bool* p_visible, ImGuiTreeNodeFlags flags );             
CIMGUI_API ImGuiMultiSelectIO* igBeginMultiSelect(ImGuiMultiSelectFlags flags, int selection_size , int items_count );
CIMGUI_API ImGuiMultiSelectIO* igEndMultiSelect(void);
CIMGUI_API bool igBeginListBox(const char* label, ImVec2 size );                                                             
CIMGUI_API void igEndListBox(void);                                                                                                              
CIMGUI_API bool igBeginMenuBar(void);                                           
CIMGUI_API void igEndMenuBar(void);                                             
CIMGUI_API bool igBeginMainMenuBar(void);                                       
CIMGUI_API void igEndMainMenuBar(void);                                         
CIMGUI_API bool igBeginMenu(const char* label, bool enabled );      
CIMGUI_API void igEndMenu(void);                                                
CIMGUI_API bool igBeginTooltip(void);                                            
CIMGUI_API void igEndTooltip(void);                                              
CIMGUI_API bool igBeginItemTooltip(void);                                            
CIMGUI_API bool igBeginPopup(const char* str_id, ImGuiWindowFlags flags );                                    
CIMGUI_API bool igBeginPopupModal(const char* name, bool* p_open , ImGuiWindowFlags flags );      
CIMGUI_API void igEndPopup(void);                                                                                      
CIMGUI_API void igCloseCurrentPopup(void);                                                                           
CIMGUI_API bool igBeginPopupContextItem(const char* str_id , ImGuiPopupFlags popup_flags );        
CIMGUI_API bool igBeginPopupContextWindow(const char* str_id , ImGuiPopupFlags popup_flags );      
CIMGUI_API bool igBeginPopupContextVoid(const char* str_id , ImGuiPopupFlags popup_flags );        
CIMGUI_API bool igBeginTable(const char* str_id, int columns, ImGuiTableFlags flags , ImVec2 outer_size , float inner_width );
CIMGUI_API void igEndTable(void);                         
CIMGUI_API void  igColumns(int count , const char* id , bool borders );
CIMGUI_API int   igGetColumnIndex(void);                                   
CIMGUI_API float igGetColumnWidth(int column_index );            
CIMGUI_API float igGetColumnOffset(int column_index );           
CIMGUI_API int   igGetColumnsCount(void);
CIMGUI_API bool igBeginTabBar(const char* str_id, ImGuiTabBarFlags flags );        
CIMGUI_API void igEndTabBar(void);                                                          
CIMGUI_API bool igBeginTabItem(const char* label, bool* p_open , ImGuiTabItemFlags flags ); 
CIMGUI_API void igEndTabItem(void);                                                         
CIMGUI_API ImGuiID igDockSpace(ImGuiID dockspace_id, ImVec2 size , ImGuiDockNodeFlags flags , const ImGuiWindowClass* window_class );
CIMGUI_API ImGuiID igDockSpaceOverViewport(ImGuiID dockspace_id , const ImGuiViewport* viewport , ImGuiDockNodeFlags flags , const ImGuiWindowClass* window_class );
CIMGUI_API bool                igBeginDragDropSource(ImGuiDragDropFlags flags );                          
CIMGUI_API void                igEndDragDropSource(void);                                                          
CIMGUI_API bool                igBeginDragDropTarget(void);                                                        
CIMGUI_API const ImGuiPayload* igAcceptDragDropPayload(const char* type, ImGuiDragDropFlags flags );      
CIMGUI_API void                igEndDragDropTarget(void);                                                          
CIMGUI_API const ImGuiPayload* igGetDragDropPayload(void);                                                         
CIMGUI_API void igBeginDisabled(bool disabled );
CIMGUI_API void igEndDisabled(void);
CIMGUI_API ImGuiID        igGetItemID(void);                                             
CIMGUI_API ImVec2         igGetItemRectMin(void);                                        
CIMGUI_API ImVec2         igGetItemRectMax(void);                                        
CIMGUI_API ImGuiItemFlags igGetItemFlags(void);                                          
CIMGUI_API ImDrawList* igGetBackgroundDrawList(ImGuiViewport* viewport );      
CIMGUI_API ImDrawList* igGetForegroundDrawList(ImGuiViewport* viewport );      
CIMGUI_API int                   igGetFrameCount(void);                                  
CIMGUI_API ImDrawListSharedData* igGetDrawListSharedData(void);                          
CIMGUI_API ImVec2 igCalcTextSize(const char* text, const char* text_end , bool hide_text_after_double_hash , float wrap_width );
CIMGUI_API ImVec4 igColorConvertU32ToFloat4(ImU32 in);
CIMGUI_API ImU32  igColorConvertFloat4ToU32(ImVec4 in);
CIMGUI_API void   igColorConvertRGBtoHSV(float r, float g, float b, float* out_h, float* out_s, float* out_v);
CIMGUI_API void   igColorConvertHSVtoRGB(float h, float s, float v, float* out_r, float* out_g, float* out_b);
CIMGUI_API const char* igGetClipboardText(void);
CIMGUI_API void  igDebugTextEncoding(const char* text);
CIMGUI_API void  igDebugStartItemPicker(void);
CIMGUI_API bool  igDebugCheckVersionAndDataLayout(const char* version_str, size_t sz_io, size_t sz_style, size_t sz_vec2, size_t sz_vec4, size_t sz_drawvert, size_t sz_drawidx); 
CIMGUI_API void  igGetAllocatorFunctions(ImGuiMemAllocFunc* p_alloc_func, ImGuiMemFreeFunc* p_free_func, void** p_user_data);
CIMGUI_API void           igDestroyPlatformWindows(void);                             
CIMGUI_API ImGuiViewport* igFindViewportByID(ImGuiID viewport_id);                    
CIMGUI_API ImGuiViewport* igFindViewportByPlatformHandle(void* platform_handle);      
CIMGUI_API ImVec2 igGetContentRegionMax(void);            