imgui-wasm-core/src/generated_imgui_api.rs


extern "C" {
    #[link_name = "igAcceptDragDropPayload"]
    fn c_igAcceptDragDropPayload(arg0: *const c_char, arg1: c_int) -> *const c_void;
    #[link_name = "igAlignTextToFramePadding"]
    fn c_igAlignTextToFramePadding() -> ();
    #[link_name = "igArrowButton"]
    fn c_igArrowButton(arg0: *const c_char, arg1: c_int) -> bool;
    #[link_name = "igBegin"]
    fn c_igBegin(arg0: *const c_char, arg1: *mut bool, arg2: c_int) -> bool;
    #[link_name = "igBeginChild"]
    fn c_igBeginChild(arg0: *const c_char, arg1: ImVec2, arg2: c_int, arg3: c_int) -> bool;
    #[link_name = "igBeginChildID"]
    fn c_igBeginChildID(arg0: c_uint, arg1: ImVec2, arg2: c_int, arg3: c_int) -> bool;
    #[link_name = "igBeginCombo"]
    fn c_igBeginCombo(arg0: *const c_char, arg1: *const c_char, arg2: c_int) -> bool;
    #[link_name = "igBeginDisabled"]
    fn c_igBeginDisabled(arg0: bool) -> ();
    #[link_name = "igBeginDragDropSource"]
    fn c_igBeginDragDropSource(arg0: c_int) -> bool;
    #[link_name = "igBeginDragDropTarget"]
    fn c_igBeginDragDropTarget() -> bool;
    #[link_name = "igBeginGroup"]
    fn c_igBeginGroup() -> ();
    #[link_name = "igBeginItemTooltip"]
    fn c_igBeginItemTooltip() -> bool;
    #[link_name = "igBeginListBox"]
    fn c_igBeginListBox(arg0: *const c_char, arg1: ImVec2) -> bool;
    #[link_name = "igBeginMainMenuBar"]
    fn c_igBeginMainMenuBar() -> bool;
    #[link_name = "igBeginMenu"]
    fn c_igBeginMenu(arg0: *const c_char, arg1: bool) -> bool;
    #[link_name = "igBeginMenuBar"]
    fn c_igBeginMenuBar() -> bool;
    #[link_name = "igBeginMultiSelect"]
    fn c_igBeginMultiSelect(arg0: c_int, arg1: c_int, arg2: c_int) -> *mut c_void;
    #[link_name = "igBeginPopup"]
    fn c_igBeginPopup(arg0: *const c_char, arg1: c_int) -> bool;
    #[link_name = "igBeginPopupContextItem"]
    fn c_igBeginPopupContextItem(arg0: *const c_char, arg1: c_int) -> bool;
    #[link_name = "igBeginPopupContextVoid"]
    fn c_igBeginPopupContextVoid(arg0: *const c_char, arg1: c_int) -> bool;
    #[link_name = "igBeginPopupContextWindow"]
    fn c_igBeginPopupContextWindow(arg0: *const c_char, arg1: c_int) -> bool;
    #[link_name = "igBeginPopupModal"]
    fn c_igBeginPopupModal(arg0: *const c_char, arg1: *mut bool, arg2: c_int) -> bool;
    #[link_name = "igBeginTabBar"]
    fn c_igBeginTabBar(arg0: *const c_char, arg1: c_int) -> bool;
    #[link_name = "igBeginTabItem"]
    fn c_igBeginTabItem(arg0: *const c_char, arg1: *mut bool, arg2: c_int) -> bool;
    #[link_name = "igBeginTable"]
    fn c_igBeginTable(arg0: *const c_char, arg1: c_int, arg2: c_int, arg3: ImVec2, arg4: f32) -> bool;
    #[link_name = "igBeginTooltip"]
    fn c_igBeginTooltip() -> bool;
    #[link_name = "igBullet"]
    fn c_igBullet() -> ();
    #[link_name = "igButton"]
    fn c_igButton(arg0: *const c_char, arg1: ImVec2) -> bool;
    #[link_name = "igCalcItemWidth"]
    fn c_igCalcItemWidth() -> f32;
    #[link_name = "igCalcTextSize"]
    fn c_igCalcTextSize(arg0: *const c_char, arg1: *const c_char, arg2: bool, arg3: f32) -> ImVec2;
    #[link_name = "igCheckbox"]
    fn c_igCheckbox(arg0: *const c_char, arg1: *mut bool) -> bool;
    #[link_name = "igCheckboxFlagsIntPtr"]
    fn c_igCheckboxFlagsIntPtr(arg0: *const c_char, arg1: *mut c_int, arg2: c_int) -> bool;
    #[link_name = "igCheckboxFlagsUintPtr"]
    fn c_igCheckboxFlagsUintPtr(arg0: *const c_char, arg1: *mut c_uint, arg2: c_uint) -> bool;
    #[link_name = "igCloseCurrentPopup"]
    fn c_igCloseCurrentPopup() -> ();
    #[link_name = "igCollapsingHeader"]
    fn c_igCollapsingHeader(arg0: *const c_char, arg1: c_int) -> bool;
    #[link_name = "igCollapsingHeaderBoolPtr"]
    fn c_igCollapsingHeaderBoolPtr(arg0: *const c_char, arg1: *mut bool, arg2: c_int) -> bool;
    #[link_name = "igColorButton"]
    fn c_igColorButton(arg0: *const c_char, arg1: ImVec4, arg2: c_int, arg3: ImVec2) -> bool;
    #[link_name = "igColorConvertFloat4ToU32"]
    fn c_igColorConvertFloat4ToU32(arg0: ImVec4) -> u32;
    #[link_name = "igColorConvertHSVtoRGB"]
    fn c_igColorConvertHSVtoRGB(arg0: f32, arg1: f32, arg2: f32, arg3: *mut f32, arg4: *mut f32, arg5: *mut f32) -> ();
    #[link_name = "igColorConvertRGBtoHSV"]
    fn c_igColorConvertRGBtoHSV(arg0: f32, arg1: f32, arg2: f32, arg3: *mut f32, arg4: *mut f32, arg5: *mut f32) -> ();
    #[link_name = "igColorConvertU32ToFloat4"]
    fn c_igColorConvertU32ToFloat4(arg0: u32) -> ImVec4;
    #[link_name = "igColorEdit3"]
    fn c_igColorEdit3(arg0: *const c_char, arg1: *mut f32, arg2: c_int) -> bool;
    #[link_name = "igColorEdit4"]
    fn c_igColorEdit4(arg0: *const c_char, arg1: *mut f32, arg2: c_int) -> bool;
    #[link_name = "igColorPicker3"]
    fn c_igColorPicker3(arg0: *const c_char, arg1: *mut f32, arg2: c_int) -> bool;
    #[link_name = "igColorPicker4"]
    fn c_igColorPicker4(arg0: *const c_char, arg1: *mut f32, arg2: c_int, arg3: *const f32) -> bool;
    #[link_name = "igColumns"]
    fn c_igColumns(arg0: c_int, arg1: *const c_char, arg2: bool) -> ();
    #[link_name = "igCombo"]
    fn c_igCombo(arg0: *const c_char, arg1: *mut c_int, arg2: *const c_char, arg3: c_int) -> bool;
    #[link_name = "igComboChar"]
    fn c_igComboChar(arg0: *const c_char, arg1: *mut c_int, arg2: *const *const c_char, arg3: c_int, arg4: c_int) -> bool;
    #[link_name = "igCreateContext"]
    fn c_igCreateContext(arg0: *mut c_void) -> *mut c_void;
    #[link_name = "igDebugCheckVersionAndDataLayout"]
    fn c_igDebugCheckVersionAndDataLayout(arg0: *const c_char, arg1: usize, arg2: usize, arg3: usize, arg4: usize, arg5: usize, arg6: usize) -> bool;
    #[link_name = "igDebugStartItemPicker"]
    fn c_igDebugStartItemPicker() -> ();
    #[link_name = "igDebugTextEncoding"]
    fn c_igDebugTextEncoding(arg0: *const c_char) -> ();
    #[link_name = "igDestroyContext"]
    fn c_igDestroyContext(arg0: *mut c_void) -> ();
    #[link_name = "igDestroyPlatformWindows"]
    fn c_igDestroyPlatformWindows() -> ();
    #[link_name = "igDockSpace"]
    fn c_igDockSpace(arg0: c_uint, arg1: ImVec2, arg2: c_int, arg3: *const c_void) -> c_uint;
    #[link_name = "igDockSpaceOverViewport"]
    fn c_igDockSpaceOverViewport(arg0: c_uint, arg1: *const c_void, arg2: c_int, arg3: *const c_void) -> c_uint;
    #[link_name = "igDragFloat"]
    fn c_igDragFloat(arg0: *const c_char, arg1: *mut f32, arg2: f32, arg3: f32, arg4: f32, arg5: *const c_char, arg6: c_int) -> bool;
    #[link_name = "igDragFloat3"]
    fn c_igDragFloat3(arg0: *const c_char, arg1: *mut f32, arg2: f32, arg3: f32, arg4: f32, arg5: *const c_char, arg6: c_int) -> bool;
    #[link_name = "igDragFloat4"]
    fn c_igDragFloat4(arg0: *const c_char, arg1: *mut f32, arg2: f32, arg3: f32, arg4: f32, arg5: *const c_char, arg6: c_int) -> bool;
    #[link_name = "igDragFloatRange2"]
    fn c_igDragFloatRange2(arg0: *const c_char, arg1: *mut f32, arg2: *mut f32, arg3: f32, arg4: f32, arg5: f32, arg6: *const c_char, arg7: *const c_char, arg8: c_int) -> bool;
    #[link_name = "igDragInt"]
    fn c_igDragInt(arg0: *const c_char, arg1: *mut c_int, arg2: f32, arg3: c_int, arg4: c_int, arg5: *const c_char, arg6: c_int) -> bool;
    #[link_name = "igDragIntRange2"]
    fn c_igDragIntRange2(arg0: *const c_char, arg1: *mut c_int, arg2: *mut c_int, arg3: f32, arg4: c_int, arg5: c_int, arg6: *const c_char, arg7: *const c_char, arg8: c_int) -> bool;
    #[link_name = "igDummy"]
    fn c_igDummy(arg0: ImVec2) -> ();
    #[link_name = "igEnd"]
    fn c_igEnd() -> ();
    #[link_name = "igEndChild"]
    fn c_igEndChild() -> ();
    #[link_name = "igEndCombo"]
    fn c_igEndCombo() -> ();
    #[link_name = "igEndDisabled"]
    fn c_igEndDisabled() -> ();
    #[link_name = "igEndDragDropSource"]
    fn c_igEndDragDropSource() -> ();
    #[link_name = "igEndDragDropTarget"]
    fn c_igEndDragDropTarget() -> ();
    #[link_name = "igEndFrame"]
    fn c_igEndFrame() -> ();
    #[link_name = "igEndGroup"]
    fn c_igEndGroup() -> ();
    #[link_name = "igEndListBox"]
    fn c_igEndListBox() -> ();
    #[link_name = "igEndMainMenuBar"]
    fn c_igEndMainMenuBar() -> ();
    #[link_name = "igEndMenu"]
    fn c_igEndMenu() -> ();
    #[link_name = "igEndMenuBar"]
    fn c_igEndMenuBar() -> ();
    #[link_name = "igEndMultiSelect"]
    fn c_igEndMultiSelect() -> *mut c_void;
    #[link_name = "igEndPopup"]
    fn c_igEndPopup() -> ();
    #[link_name = "igEndTabBar"]
    fn c_igEndTabBar() -> ();
    #[link_name = "igEndTabItem"]
    fn c_igEndTabItem() -> ();
    #[link_name = "igEndTable"]
    fn c_igEndTable() -> ();
    #[link_name = "igEndTooltip"]
    fn c_igEndTooltip() -> ();
    #[link_name = "igFindViewportByID"]
    fn c_igFindViewportByID(arg0: c_uint) -> *mut c_void;
    #[link_name = "igFindViewportByPlatformHandle"]
    fn c_igFindViewportByPlatformHandle(arg0: *mut c_void) -> *mut c_void;
    #[link_name = "igGetAllocatorFunctions"]
    fn c_igGetAllocatorFunctions(arg0: *mut c_void, arg1: *mut c_void, arg2: *mut *mut c_void) -> ();
    #[link_name = "igGetBackgroundDrawList"]
    fn c_igGetBackgroundDrawList(arg0: *mut c_void) -> *mut c_void;
    #[link_name = "igGetClipboardText"]
    fn c_igGetClipboardText() -> *const c_char;
    #[link_name = "igGetColorU32ImU32"]
    fn c_igGetColorU32ImU32(arg0: u32, arg1: f32) -> u32;
    #[link_name = "igGetColorU32ImVec4"]
    fn c_igGetColorU32ImVec4(arg0: ImVec4) -> u32;
    #[link_name = "igGetColumnIndex"]
    fn c_igGetColumnIndex() -> c_int;
    #[link_name = "igGetColumnOffset"]
    fn c_igGetColumnOffset(arg0: c_int) -> f32;
    #[link_name = "igGetColumnWidth"]
    fn c_igGetColumnWidth(arg0: c_int) -> f32;
    #[link_name = "igGetColumnsCount"]
    fn c_igGetColumnsCount() -> c_int;
    #[link_name = "igGetContentRegionAvail"]
    fn c_igGetContentRegionAvail() -> ImVec2;
    #[link_name = "igGetContentRegionMax"]
    fn c_igGetContentRegionMax() -> ImVec2;
    #[link_name = "igGetCurrentContext"]
    fn c_igGetCurrentContext() -> *mut c_void;
    #[link_name = "igGetCursorPos"]
    fn c_igGetCursorPos() -> ImVec2;
    #[link_name = "igGetCursorPosX"]
    fn c_igGetCursorPosX() -> f32;
    #[link_name = "igGetCursorPosY"]
    fn c_igGetCursorPosY() -> f32;
    #[link_name = "igGetCursorScreenPos"]
    fn c_igGetCursorScreenPos() -> ImVec2;
    #[link_name = "igGetCursorStartPos"]
    fn c_igGetCursorStartPos() -> ImVec2;
    #[link_name = "igGetDragDropPayload"]
    fn c_igGetDragDropPayload() -> *const c_void;
    #[link_name = "igGetDrawData"]
    fn c_igGetDrawData() -> *mut c_void;
    #[link_name = "igGetDrawListSharedData"]
    fn c_igGetDrawListSharedData() -> *mut c_void;
    #[link_name = "igGetFont"]
    fn c_igGetFont() -> *mut c_void;
    #[link_name = "igGetFontBaked"]
    fn c_igGetFontBaked() -> *mut c_void;
    #[link_name = "igGetFontSize"]
    fn c_igGetFontSize() -> f32;
    #[link_name = "igGetFontTexUvWhitePixel"]
    fn c_igGetFontTexUvWhitePixel() -> ImVec2;
    #[link_name = "igGetForegroundDrawList"]
    fn c_igGetForegroundDrawList(arg0: *mut c_void) -> *mut c_void;
    #[link_name = "igGetFrameCount"]
    fn c_igGetFrameCount() -> c_int;
    #[link_name = "igGetFrameHeight"]
    fn c_igGetFrameHeight() -> f32;
    #[link_name = "igGetFrameHeightWithSpacing"]
    fn c_igGetFrameHeightWithSpacing() -> f32;
    #[link_name = "igGetID"]
    fn c_igGetID(arg0: *const c_char) -> c_uint;
    #[link_name = "igGetIDInt"]
    fn c_igGetIDInt(arg0: c_int) -> c_uint;
    #[link_name = "igGetIDPtr"]
    fn c_igGetIDPtr(arg0: *const c_void) -> c_uint;
    #[link_name = "igGetIDStr"]
    fn c_igGetIDStr(arg0: *const c_char, arg1: *const c_char) -> c_uint;
    #[link_name = "igGetIO"]
    fn c_igGetIO() -> *mut c_void;
    #[link_name = "igGetItemFlags"]
    fn c_igGetItemFlags() -> c_int;
    #[link_name = "igGetItemID"]
    fn c_igGetItemID() -> c_uint;
    #[link_name = "igGetItemRectMax"]
    fn c_igGetItemRectMax() -> ImVec2;
    #[link_name = "igGetItemRectMin"]
    fn c_igGetItemRectMin() -> ImVec2;
